// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          class="uv_s7fbsh0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <legend
                class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir933v"
            >
              <label
                aria-disabled="false"
                class="uv_mhtya39 uv_mhtya3a uv_mhtya3d"
                for="_r_3_"
              >
                <div
                  class="uv_mxir930 uv_mxir931j uv_mxir932d uv_mxir935d"
                >
                  <div
                    class="uv_78oem50 uv_78oem5d uv_78oem52j"
                    style="--uv_ivy5ld0: auto 1fr; --uv_ivy5ld1: auto 1fr; --uv_ivy5ld2: auto 1fr; --uv_ivy5ld3: auto 1fr; --uv_ivy5ld4: auto 1fr; --uv_ivy5ld5: auto 1fr;"
                  >
                    <span
                      class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_3_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_mhtya30 uv_mhtya31 uv_mhtya33 uv_mhtya35"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_mhtya38"
                    id="_r_3_"
                    name="Group.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_mhtya39 uv_mhtya3a uv_mhtya3d"
                for="_r_9_"
              >
                <div
                  class="uv_mxir930 uv_mxir931j uv_mxir932d uv_mxir935d"
                >
                  <div
                    class="uv_78oem50 uv_78oem5d uv_78oem52j"
                    style="--uv_ivy5ld0: auto 1fr; --uv_ivy5ld1: auto 1fr; --uv_ivy5ld2: auto 1fr; --uv_ivy5ld3: auto 1fr; --uv_ivy5ld4: auto 1fr; --uv_ivy5ld5: auto 1fr;"
                  >
                    <span
                      class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_9_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_mhtya30 uv_mhtya31 uv_mhtya33 uv_mhtya35"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_mhtya38"
                    id="_r_9_"
                    name="Group.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`groupField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir933p"
      >
        <fieldset
          aria-describedby="_r_f_"
          class="uv_s7fbsh0"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935p"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div
                class="uv_mxir930 uv_mxir93v uv_mxir932j uv_mxir935j"
              >
                <legend
                  class="uv_f32sl0 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
                >
                  ToggleGroupField events
                </legend>
                <span
                  class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak89 uv_1yhcak8n uv_1yhcak81a uv_1yhcak82m"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir933v"
            >
              <label
                aria-disabled="false"
                class="uv_mhtya39 uv_mhtya3a uv_mhtya3d"
                for="_r_k_"
              >
                <div
                  class="uv_mxir930 uv_mxir931j uv_mxir932d uv_mxir935d"
                >
                  <div
                    class="uv_78oem50 uv_78oem5d uv_78oem52j"
                    style="--uv_ivy5ld0: auto 1fr; --uv_ivy5ld1: auto 1fr; --uv_ivy5ld2: auto 1fr; --uv_ivy5ld3: auto 1fr; --uv_ivy5ld4: auto 1fr; --uv_ivy5ld5: auto 1fr;"
                  >
                    <span
                      class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_k_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_mhtya30 uv_mhtya31 uv_mhtya34 uv_mhtya35"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="true"
                    class="uv_mhtya38"
                    id="_r_k_"
                    name="test.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_mhtya39 uv_mhtya3a uv_mhtya3d"
                for="_r_q_"
              >
                <div
                  class="uv_mxir930 uv_mxir931j uv_mxir932d uv_mxir935d"
                >
                  <div
                    class="uv_78oem50 uv_78oem5d uv_78oem52j"
                    style="--uv_ivy5ld0: auto 1fr; --uv_ivy5ld1: auto 1fr; --uv_ivy5ld2: auto 1fr; --uv_ivy5ld3: auto 1fr; --uv_ivy5ld4: auto 1fr; --uv_ivy5ld5: auto 1fr;"
                  >
                    <span
                      class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                      for="_r_q_"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_mhtya30 uv_mhtya31 uv_mhtya34 uv_mhtya35"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="true"
                    class="uv_mhtya38"
                    id="_r_q_"
                    name="test.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
        <span
          class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak89 uv_1yhcak8p uv_1yhcak81a uv_1yhcak82m"
          id="_r_f_"
          role="status"
        >
          This field is required
        </span>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
